# advent-of-code-2023

./: .gitignore
day-01/: Cargo.toml  part1
day-01/benches/: day-01.rs
day-01/src/: part1.rs  part2.rs
day-02/: Cargo.toml
day-02/benches/: day-01.rs  day-02.rs
day-02/src/: custom_error.rs  part1.rs  part2.rs
day-03/: Cargo.toml
day-03/benches/: day-03.rs
day-03/src/: part1.rs
day-04/: Cargo.toml
day-04/benches/: day-04.rs
day-04/data/: part1-real2.txt
day-04/src/: part1.rs
day-05/: Cargo.toml
day-05/benches/: day-05.rs
day-05/src/: part1.rs
day-06/: Cargo.toml  README.md
day-06/benches/: day-06.rs
day-06/src/: part1.rs  part2.rs
