[package]
name = "day-02"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = { version = "0.25.0", features = ["strum_macros"] }
strum_macros = "0.25.3"
thiserror = "1.0.50"
tracing = "0.1.40"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "day-01"
harness = false
