[package]
name = "day-02"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = { version = "0.26.2", features = ["strum_macros"] }
strum_macros = "0.26.2"
thiserror = "1.0.60"
tracing = "0.1.40"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "day-02"
harness = false
